Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41312

[Reg 4->5] QMainWindow::showEvent is not called when the window is restored after being minimized

XMLWordPrintable

    • 4b03b18548200db0ad65415c7df7a7665a9ec3d8 (5.4, 25.9.2014, 5.4)

      When I minimize the window and then restore it (by clicking its taskbar button, for example), I expect to receive a showEvent. It happens when the test application (attached) is built with Qt 4.8.6. But when it's built with 5.3.1, the only time the window receives a showEvent is when the application is starting up and the window is displayed for the first time. I believe it is a bug, according to http://qt-project.org/doc/qt-5/qwidget.html#showEvent the event must be dispatched in this case.

      Neither is a QHideEvent received when minimizing.

        1. main.zip
          2 kB
          Alex
        2. qtbug41312_log.txt
          3 kB
          Friedemann Kleint
        3. qtbug41312.zip
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-41312
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            violetgiraffe Alex
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes